Inference engine demo test