@@ -5,36 +5,3 @@ void main() {
     IO.println("i = " + i);
   }
 }
-
-
-
-//# inside the container
-//./scripts/jextract-gen.sh
-
-//That’s it—your generated Java sources will be in panama-src/ort and panama-src/genai on your host.
-
-//# inside the container
-//mkdir -p /workspace/build/classes
-//javac -d /workspace/build/classes \
-//  $(find /workspace/panama-src -name '*.java') \
-//  /workspace/src/main/java/demo/GenAiSmoke.java
-//
-
-//# run (mount your ORT-GenAI model at /models/deps when starting the container)
-//# inside the container:
-//java -cp /workspace/build/classes -DmodelDir=/models/deps demo.GenAiSmoke
-
-//java \
-    //--enable-native-access=ALL-UNNAMED \
-   //-Djava.library.path="$ONNX_LIB_PATH" \
-   //-cp /workspace/out/production/jextract-onnx \
-//   -DmodelDir=/models/deps/cpu_and_mobile/cpu-int4-rtn-block-32-acc-level-4 \
-//   demo.GenAiSmoke
-
-//rm -f /usr/local/bin/jextract
-//cat >/usr/local/bin/jextract <<'SH'
-//#!/usr/bin/env bash
-//exec /opt/jextract/bin/jextract "$@"
-//SH
-//chmod +x /usr/local/bin/jextract
-//jextract --version
